fix z-index on movie img

--- a/style.css
+++ b/style.css
@@ -24,7 +24,6 @@ body{
 
 .logo-container{
     flex: 1;
-
 }
 
 .logo{
@@ -205,6 +204,11 @@ main{
     padding: 10px 20px;
 }
 
+.movie-list-button:hover, .movie-list-button:focus{
+    background-color: white;
+    color: orange;
+}
+
 .movie-list-desc{
     position: absolute;
     left: 90px;
@@ -225,7 +229,6 @@ main{
 }
 
 .movie-list:hover{
-    z-index: 2;
     transform: scale(102%);
 }
 
@@ -245,47 +248,41 @@ main{
     font-family: "Sen"
 }
 
-/* The Overlay (background) */
 .overlay {
-    /* Height & width depends on how you want to reveal the overlay (see JS below) */   
     height: 100%;
     width: 0;
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
+    position: fixed;
+    z-index: 1;
     left: 0;
     top: 0;
-    background-color: rgb(0,0,0); /* Black fallback color */
-    background-color: rgba(0,0,0, 0.9); /* Black w/opacity */
-    overflow-x: hidden; /* Disable horizontal scroll */
-    transition: 0.5s; /* 0.5 second transition effect to slide in or slide down the overlay (height or width, depending on reveal) */
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0, 0.9); 
+    overflow-x: hidden;
+    transition: 0.5s;
 }
-  
-/* Position the content inside the overlay */
+
 .overlay-content {
     color: #fefefe;
     position: relative;
-    top: 10%; /* 25% from the top */
-    width: 100%; /* 100% width */
-    text-align: center; /* Centered text/links */
-    margin-top: 30px; /* 30px top margin to avoid conflict with the close button on smaller screens */
+    top: 10%; 
+    width: 100%; 
+    text-align: center; 
+    margin-top: 30px;
 }
   
-/* The navigation links inside the overlay */
 .overlay a {
     padding: 8px;
     text-decoration: none;
     font-size: 36px;
     color: #818181;
-    display: block; /* Display block instead of inline */
-    transition: 0.3s; /* Transition effects on hover (color) */
+    display: block; 
+    transition: 0.3s; 
 }
-  
-/* When you mouse over the navigation links, change their color */
+
 .overlay a:hover, .overlay a:focus {
     color: #f1f1f1;
 }
   
-/* Position the close button (top right corner) */
 .overlay .closebtn {
     position: absolute;
     top: 20px;
@@ -335,7 +332,7 @@ main{
     font-family: 'Sen';
 }
 
-/* When the height of the screen is less than 450 pixels, change the font-size of the links and position the close button again, so they don't overlap */
+/* make content don't overlap */
 @media screen and (max-height: 450px) {
     .overlay a {font-size: 20px}
     .overlay .closebtn {
